<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamBuilder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_players">Players</string>
    <string name="action_teams">Teams</string>
    <string name="player_add_title">Add Player</string>
    <string name="text_name_hint">Name</string>
    <string name="menu_addPlayer">Add Player</string>
    <string name="button_save">Save</string>
    <string name="text_skills_title">Skills</string>
    <string name="text_groups_title">Groups</string>
    <string name="button_addSkill">Add</string>
    <string name="button_manageGroups">Manage Groups...</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>

</resources>
