<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_name_hint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

	<LinearLayout
	    android:id="@+id/layout_skills"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
        
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/text_skills_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

	    <Spinner
	        android:id="@+id/spinner_skills"
	        android:layout_width="300dp"
	        android:layout_height="wrap_content" />

	    <EditText
	        android:id="@+id/text_skills"
	        android:layout_width="50dp"
	        android:layout_height="wrap_content"
	        android:inputType="number" />
	    
	    <Button 
	        android:id="@+id/button_add_skills"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/button_addSkill"
	        android:onClick="addSkill" />
	    
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/layout_groups"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_groups_title"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	</LinearLayout>
	
	<Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:text="@string/button_save"
        android:onClick="save" />
</LinearLayout>
